=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.018 - Under Development

=over

=item *

Added C<--no-backup> option to C<krang_upgrade>. [Sam]

=item *

Fixed bug in C<bin/krang_publish> where unknown errors during story
publish would trigger an exit without any kind of useful message.  The
error is now printed to STDERR. [Peter]

=item *

Changed Krang to log and drop elements which exceed the maximum
allowed by their parent element.  This mirrors the behavior for
elements with illegal class names.  This allows for an easier element
set development process at the risk of possible data loss, which is
somewhat mitigated by the built in revision system. [Sam]

=item *

Fixed Krang::ElementLibrary to return a sorted list from top_levels().
This results in a sorted list or article types in the UI.  [Sam]

=item *

>>>>>>> 1.61
Added a new hidden user called 'system' which is now used by
Krang::Script.  This means you can now delete the 'admin' user with
impunity. [Sam]

=item *

Fixed bug where Krang::ElementClass::TopLevel::publish_check() was not
being checked by Krang::Schedule.  Stories that are marked to not be
published by the scheduler will now have their wishes respected.
[Peter]

=item *

Fixed bug where contributors created by C<krang_import> weren't
searchable in the UI unless they had first, middle and last
names. [Sam]

=item *

Added code to generate HTML documentation for the scripts in
F<bin/>. [Sam]

=item *

Fixed a bug where previewing/publishing zero-length stories caused an
error.  [Peter]

=back

=head2 v1.017 - April 29, 2004

=over

=item *

Fixed a bug where C<tmpl_include> calls in templates weren't correctly
searching the category tree in all cases. [Matt]

=item *

Modified Krang::Widget::category_chooser() to take into account
category permissions when building the category chooser.  Also took
advantage of the multiple-root support in HTML::PopupTreeSelect 1.4 to